--- a/public/googleb72boX-YTMPpT_1qmIYVjY3BpA7LIVuMVPtBqqJJBmk.html
+++ b/public/googleb72boX-YTMPpT_1qmIYVjY3BpA7LIVuMVPtBqqJJBmk.html
@@ -1,1 +1,1 @@
-<meta name="google-site-verification" content="b72boX-YTMPpT_1qmIYVjY3BpA7LIVuMVPtBqqJJBmk" />
+google-site-verification: googleb72boX-YTMPpT_1qmIYVjY3BpA7LIVuMVPtBqqJJBmk.html
